Fixing scrollbar appearing on body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  margin: 2rem;
+  padding: 2rem;
 }
 
 .quiz-container {
